--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bitcoin Watcher</title>
+    <title>Crypto Watcher</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script_final.js" defer></script>
   </head>
